--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "jsdom": "^23.0.1"
+    "jsdom": "^23.0.1",
+    "puppeteer": "^21.7.0"
   }
 }
